package netty;
option java_package = "com.ly.dc.netty.protobuf";
option java_outer_classname = "ProtobufClass";

message Messages {
    message FirstRequest {
        required string username = 1;
        required string password = 2;
    }
    optional FirstRequest request1 = 1;
    message SecondRequest {
        required string uuid = 1;
        required string message = 2;
    }
    optional SecondRequest request2 = 2;

    message FirstResponse {
        required string uuid = 1;
    }

    optional FirstResponse response1 = 3;
    message SecondResponse {
        required string message = 1;
    }
    optional SecondResponse response2 = 4;
}
